Update Structure, add Log , HUDShell

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "python.pythonPath": "venv/bin/python"
+    "python.pythonPath": "venv/bin/python",
+    "cSpell.words": [
+        "Popen"
+    ],
+    "python.formatting.provider": "autopep8"
 }
